# rustidemy-bot

./: Cargo.toml  Dockerfile  Dockerfile.base  README.md  app.json  render.yaml
.github/workflows/: clippy.yml  docker_build.yml
src/: config.rs  main.rs  rss_tracker.rs  udemy_extractor.rs
src/web/: handlers.rs  routes.rs  server.rs
templates/: 404.html  index.html
