[package]
name = "RustidemyBot"
version = "0.1.0"
edition = "2021"
authors = ["5hojib <yesiamshojib@gmail.com>"]
repository = "https://github.com/5hojib/RustidemyBot"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
teloxide = { version = "0.16", features = ["macros"] }
rss = "2.0"
reqwest = { version = "0.12.21", features = ["json", "cookies"] }
scraper = "0.23.1"
anyhow = "1.0"
axum = "0.8.4"